--- a/EjerciciosUD5BrunoDelgado/bin/.gitignore
+++ b/EjerciciosUD5BrunoDelgado/bin/.gitignore
@@ -1,2 +1,9 @@
+/ejercicio01/
+/ejercicio02/
+/ejercicio03/
+/ejercicio04/
 /ejercicio05/
 /ejercicio06/
+/module-info.class
+/utilidades/
+/ej4polimorfismo/
